# final-testing-framework

./: 6335020_Q_Day.Cmd.txt  6335080_Q_Day.Cmd.txt  6435060_Q_Day.Cmd.txt  How_To_Make_A_Test.ipynb  README.md  Run_Suite_Locally.ipynb  bmi_spec_tests.py  constants.py  data.nc  environment.yml  error_tests.py  ewatercycle.yaml  exampleLeakyBucketSubmissionFile.yml  exampleWflowSubmissionFile.yml  exceptions.py  main.py  metric_tests.py  mocks.py  models.txt  models_modification_tests.py  parse_submission.py  plugin_owner_select_tests.py  plugin_owner_select_tests_ui.py  plugin_owner_visualise_output.py  plugin_owner_visualise_output_ui.py  plugin_submission_tests.py  pyproject.toml  requirements.txt  run_debug_tools_locally.py  run_model_util.py  scenario_tests.py  scenarios_util.py  spec_tests.py  test.py  test_bank.py  test_report_maker.py  test_result.py  test_suite.py
guides/: HowToVerifyYourModel.md  IncorporationNotes.md  SetupGuideWindows.md
output/: ExampleGeneration.yaml  output.md  testReport.yaml
tests/: test_models_modification_tests.py  test_plugin_submission_tests.py  validate_bmi_spec_tests.py  validate_end_to_end.py  validate_error_tests.py  validate_integration.py  validate_metric_tests.py  validate_plugin_owner_test_ui.py  validate_scenario_tests.py  validate_scenarios_util.py  validate_spec_tests.py  validate_test.py  validate_test_bank.py  validate_test_report_maker.py  validate_test_suite.py
workflows/: Exceptions.py  constants.py  exampleSubmissionFile.yml  models_modification_tests.py  plugin_submission_tests.py  pullCheck.yml  (+1 more)
(+6 files in other folders)
